# GeoTraj-LC

./: .gitignore  CITATION.cff  LICENSE  README.md  correct_dets.py  pyproject.toml  requirements.txt  run.py  train.py
RLC_Dataset/annotations/events/: lane_change_events.csv
RLC_Dataset/annotations/frame_labels/: G0512-K111_clip_0000.txt  G0512-K111_clip_0001.txt  G0512-K111_clip_0002.txt  G0512-K111_clip_0003.txt  G0512-K111_clip_0004.txt  G0512-K111_clip_0005.txt  G4202-K32_clip_0000.txt  G4202-K32_clip_0001.txt  G4202-K32_clip_0002.txt  G4202-K32_clip_0003.txt  G4202-K32_clip_0004.txt  G4202-K32_clip_0005.txt  G4202-K32_clip_0006.txt  G4202-K32_clip_0007.txt  G4202-K32_clip_0008.txt  G4202-K32_clip_0009.txt  G4202-K32_clip_0010.txt  G4202-K32_clip_0011.txt  G4215-K12_clip_0000.txt  S2-K152_clip_0000.txt  (+56 more)
RLC_Dataset/localization_anchors/: README.md
RLC_Dataset/maps/: scale_factors.json
checkpoints/best/: normalizer.pkl  tcn_model.pth
configs/: default.yaml
docs/: DATASET.md  REPRODUCIBILITY.md
geotraj_lc/: __init__.py  __main__.py  config.py  evaluate.py  train.py
geotraj_lc/anchor_correction/: __init__.py  correction.py  dataset.py  model.py  trainer.py
geotraj_lc/evaluation/: __init__.py  event_evaluator.py  metrics.py
geotraj_lc/event_decoding/: __init__.py  detector.py
geotraj_lc/geometry/: __init__.py  geometry.py
geotraj_lc/tcn/: __init__.py  model.py  samples.py  trainer.py
geotraj_lc/trajectory/: __init__.py  dataset.py  feature_extractor.py  io.py  kalman.py  layout.py  normalizer.py
src/geotraj_lc/: config.py  evaluate.py  train.py
(+196 files in other folders)
